native/signal_ffi.h


typedef uint8_t SignalType_FixedArray32_uint8_t[32];

typedef uint8_t SignalType_FixedArray16_uint8_t[16];

typedef const int8_t* SignalCStringPtr;

typedef struct {
 const uint8_t* base;
 size_t length;
} SignalBorrowedBuffer;

typedef struct {
 const SignalProtocolAddress* raw;
} SignalConstPointerProtocolAddress;

typedef struct {
 const SignalPublicKey* raw;
} SignalConstPointerPublicKey;

typedef struct {
 const SignalCiphertextMessage* raw;
} SignalConstPointerCiphertextMessage;

typedef struct {
 const SignalSessionRecord* raw;
} SignalConstPointerSessionRecord;

typedef struct {
 uint8_t* base;
 size_t length;
} SignalOwnedBuffer;

typedef struct {
 SignalPreKeyBundle* raw;
} SignalMutPointerPreKeyBundle;

typedef struct SignalFfiError SignalFfiError;

typedef struct {
 SignalSessionRecord* raw;
} SignalMutPointerSessionRecord;

typedef struct {
 SignalCiphertextMessage* raw;
} SignalMutPointerCiphertextMessage;

typedef struct {
 SignalPreKeySignalMessage* raw;
} SignalMutPointerPreKeySignalMessage;

typedef struct {
 SignalSignalMessage* raw;
} SignalMutPointerSignalMessage;

typedef struct {
 SignalSenderCertificate* raw;
} SignalMutPointerSenderCertificate;

typedef struct {
 SignalUnidentifiedSenderMessageContent* raw;
} SignalMutPointerUnidentifiedSenderMessageContent;

typedef struct {
 const SignalFfiIdentityKeyStoreStruct* raw;
} SignalConstPointerFfiIdentityKeyStoreStruct;

typedef struct {
 const SignalFfiKyberPreKeyStoreStruct* raw;
} SignalConstPointerFfiKyberPreKeyStoreStruct;

typedef struct {
 const SignalFfiPreKeyStoreStruct* raw;
} SignalConstPointerFfiPreKeyStoreStruct;

typedef struct {
 const SignalFfiSessionStoreStruct* raw;
} SignalConstPointerFfiSessionStoreStruct;

typedef struct {
 const SignalFfiSignedPreKeyStoreStruct* raw;
} SignalConstPointerFfiSignedPreKeyStoreStruct;

typedef struct {
 const SignalKyberPublicKey* raw;
} SignalConstPointerKyberPublicKey;

typedef struct {
 const SignalPreKeySignalMessage* raw;
} SignalConstPointerPreKeySignalMessage;

typedef struct {
 const SignalSignalMessage* raw;
} SignalConstPointerSignalMessage;

typedef struct {
 const SignalSenderCertificate* raw;
} SignalConstPointerSenderCertificate;

typedef struct {
 const SignalUnidentifiedSenderMessageContent* raw;
} SignalConstPointerUnidentifiedSenderMessageContent;

typedef struct {
 const SignalPreKeyBundle* raw;
} SignalConstPointerPreKeyBundle;

SignalFfiError* signal_ciphertext_message_destroy(
 SignalMutPointerCiphertextMessage p
);

SignalFfiError* signal_ciphertext_message_serialize(
 SignalOwnedBuffer* out,
 SignalConstPointerCiphertextMessage obj
);

SignalFfiError* signal_ciphertext_message_type(
 uint8_t* out,
 SignalConstPointerCiphertextMessage msg
);

SignalFfiError* signal_decrypt_message(
 SignalOwnedBuffer* out,
 SignalConstPointerSignalMessage message,
 SignalConstPointerProtocolAddress protocol_address,
 SignalConstPointerProtocolAddress local_address,
 SignalConstPointerFfiSessionStoreStruct session_store,
 SignalConstPointerFfiIdentityKeyStoreStruct identity_key_store
);

SignalFfiError* signal_decrypt_pre_key_message(
 SignalOwnedBuffer* out,
 SignalConstPointerPreKeySignalMessage message,
 SignalConstPointerProtocolAddress protocol_address,
 SignalConstPointerProtocolAddress local_address,
 SignalConstPointerFfiSessionStoreStruct session_store,
 SignalConstPointerFfiIdentityKeyStoreStruct identity_key_store,
 SignalConstPointerFfiPreKeyStoreStruct prekey_store,
 SignalConstPointerFfiSignedPreKeyStoreStruct signed_prekey_store,
 SignalConstPointerFfiKyberPreKeyStoreStruct kyber_prekey_store
);

SignalFfiError* signal_encrypt_message(
 SignalMutPointerCiphertextMessage* out,
 SignalBorrowedBuffer ptext,
 SignalConstPointerProtocolAddress protocol_address,
 SignalConstPointerProtocolAddress local_address,
 SignalConstPointerFfiSessionStoreStruct session_store,
 SignalConstPointerFfiIdentityKeyStoreStruct identity_key_store,
 uint64_t now
);

SignalFfiError* signal_message_deserialize(
 SignalMutPointerSignalMessage* out,
 SignalBorrowedBuffer data
);

SignalFfiError* signal_message_destroy(
 SignalMutPointerSignalMessage p
);

SignalFfiError* signal_pre_key_bundle_destroy(
 SignalMutPointerPreKeyBundle p
);

SignalFfiError* signal_pre_key_bundle_new(
 SignalMutPointerPreKeyBundle* out,
 uint32_t registration_id,
 uint32_t device_id,
 uint32_t prekey_id,
 SignalConstPointerPublicKey prekey,
 uint32_t signed_prekey_id,
 SignalConstPointerPublicKey signed_prekey,
 SignalBorrowedBuffer signed_prekey_signature,
 SignalConstPointerPublicKey identity_key,
 uint32_t kyber_prekey_id,
 SignalConstPointerKyberPublicKey kyber_prekey,
 SignalBorrowedBuffer kyber_prekey_signature
);

SignalFfiError* signal_pre_key_signal_message_deserialize(
 SignalMutPointerPreKeySignalMessage* out,
 SignalBorrowedBuffer data
);

SignalFfiError* signal_pre_key_signal_message_destroy(
 SignalMutPointerPreKeySignalMessage p
);

SignalFfiError* signal_process_prekey_bundle(
 SignalConstPointerPreKeyBundle bundle,
 SignalConstPointerProtocolAddress protocol_address,
 SignalConstPointerProtocolAddress local_address,
 SignalConstPointerFfiSessionStoreStruct session_store,
 SignalConstPointerFfiIdentityKeyStoreStruct identity_key_store,
 uint64_t now
);

SignalFfiError* signal_profile_key_derive_access_key(
 SignalType_FixedArray16_uint8_t* out,
 const SignalType_FixedArray32_uint8_t* profile_key
);

SignalFfiError* signal_sealed_session_cipher_decrypt_to_usmc(
 SignalMutPointerUnidentifiedSenderMessageContent* out,
 SignalBorrowedBuffer ctext,
 SignalConstPointerFfiIdentityKeyStoreStruct identity_store
);

SignalFfiError* signal_sealed_session_cipher_encrypt(
 SignalOwnedBuffer* out,
 SignalConstPointerProtocolAddress destination,
 SignalConstPointerUnidentifiedSenderMessageContent content,
 SignalConstPointerFfiIdentityKeyStoreStruct identity_key_store
);

SignalFfiError* signal_sender_certificate_deserialize(
 SignalMutPointerSenderCertificate* out,
 SignalBorrowedBuffer data
);

SignalFfiError* signal_sender_certificate_destroy(
 SignalMutPointerSenderCertificate p
);

SignalFfiError* signal_sender_certificate_get_device_id(
 uint32_t* out,
 SignalConstPointerSenderCertificate obj
);

SignalFfiError* signal_sender_certificate_get_sender_uuid(
 SignalCStringPtr* out,
 SignalConstPointerSenderCertificate obj
);

SignalFfiError* signal_session_record_clone(
 SignalMutPointerSessionRecord* new_obj,
 SignalConstPointerSessionRecord obj
);

SignalFfiError* signal_session_record_destroy(
 SignalMutPointerSessionRecord p
);

SignalFfiError* signal_session_record_get_remote_registration_id(
 uint32_t* out,
 SignalConstPointerSessionRecord obj
);

SignalFfiError* signal_session_record_serialize(
 SignalOwnedBuffer* out,
 SignalConstPointerSessionRecord obj
);

SignalFfiError* signal_unidentified_sender_message_content_destroy(
 SignalMutPointerUnidentifiedSenderMessageContent p
);

SignalFfiError* signal_unidentified_sender_message_content_get_contents(
 SignalOwnedBuffer* out,
 SignalConstPointerUnidentifiedSenderMessageContent obj
);

SignalFfiError* signal_unidentified_sender_message_content_get_msg_type(
 uint8_t* out,
 SignalConstPointerUnidentifiedSenderMessageContent m
);

SignalFfiError* signal_unidentified_sender_message_content_get_sender_cert(
 SignalMutPointerSenderCertificate* out,
 SignalConstPointerUnidentifiedSenderMessageContent m
);

SignalFfiError* signal_unidentified_sender_message_content_new(
 SignalMutPointerUnidentifiedSenderMessageContent* out,
 SignalConstPointerCiphertextMessage message,
 SignalConstPointerSenderCertificate sender,
 uint32_t content_hint,
 SignalBorrowedBuffer group_id
);

SignalFfiError* signal_unidentified_sender_message_content_new_from_content_and_type(
 SignalMutPointerUnidentifiedSenderMessageContent* out,
 SignalBorrowedBuffer message_content,
 uint8_t message_type,
 SignalConstPointerSenderCertificate sender,
 uint32_t content_hint,
 SignalBorrowedBuffer group_id
);