SignalCpf.LibSignal/Native/LibSignalNative.cs


    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_session_record_serialize")]
    public static extern IntPtr SessionRecordSerialize(out SignalOwnedBuffer outBuf, SignalConstPointer obj);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_session_record_destroy")]
    public static extern IntPtr SessionRecordDestroy(SignalMutPointer p);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_session_record_clone")]
    public static extern IntPtr SessionRecordClone(out SignalMutPointer outRec, SignalConstPointer obj);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_session_record_get_remote_registration_id")]
    public static extern IntPtr SessionRecordGetRemoteRegistrationId(out uint outId, SignalConstPointer obj);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_pre_key_bundle_new")]
    public static extern IntPtr PreKeyBundleNew(
        out SignalMutPointer outBundle,
        uint registrationId,
        uint deviceId,
        uint prekeyId,
        SignalConstPointer prekey,
        uint signedPrekeyId,
        SignalConstPointer signedPrekey,
        SignalBorrowedBuffer signedPrekeySignature,
        SignalConstPointer identityKey,
        uint kyberPrekeyId,
        SignalConstPointer kyberPrekey,
        SignalBorrowedBuffer kyberPrekeySignature);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_pre_key_bundle_destroy")]
    public static extern IntPtr PreKeyBundleDestroy(SignalMutPointer p);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_process_prekey_bundle")]
    public static extern IntPtr ProcessPrekeyBundle(
        SignalConstPointer bundle,
        SignalConstPointer protocolAddress,
        SignalConstPointer localAddress,
        SignalConstPointerStore sessionStore,
        SignalConstPointerStore identityKeyStore,
        ulong now);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_encrypt_message")]
    public static extern IntPtr EncryptMessage(
        out SignalMutPointer outMsg,
        SignalBorrowedBuffer ptext,
        SignalConstPointer protocolAddress,
        SignalConstPointer localAddress,
        SignalConstPointerStore sessionStore,
        SignalConstPointerStore identityKeyStore,
        ulong now);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_ciphertext_message_serialize")]
    public static extern IntPtr CiphertextMessageSerialize(out SignalOwnedBuffer outBuf, SignalConstPointer obj);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_ciphertext_message_type")]
    public static extern IntPtr CiphertextMessageType(out uint outType, SignalConstPointer obj);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_ciphertext_message_destroy")]
    public static extern IntPtr CiphertextMessageDestroy(SignalMutPointer p);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_message_deserialize")]
    public static extern IntPtr MessageDeserialize(out SignalMutPointer outMsg, SignalBorrowedBuffer data);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_message_destroy")]
    public static extern IntPtr MessageDestroy(SignalMutPointer p);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_decrypt_message")]
    public static extern IntPtr DecryptMessage(
        out SignalOwnedBuffer outBuf,
        SignalConstPointer message,
        SignalConstPointer protocolAddress,
        SignalConstPointer localAddress,
        SignalConstPointerStore sessionStore,
        SignalConstPointerStore identityKeyStore);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_pre_key_signal_message_deserialize")]
    public static extern IntPtr PreKeySignalMessageDeserialize(out SignalMutPointer outMsg, SignalBorrowedBuffer data);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_pre_key_signal_message_destroy")]
    public static extern IntPtr PreKeySignalMessageDestroy(SignalMutPointer p);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_decrypt_pre_key_message")]
    public static extern IntPtr DecryptPreKeyMessage(
        out SignalOwnedBuffer outBuf,
        SignalConstPointer message,
        SignalConstPointer protocolAddress,
        SignalConstPointer localAddress,
        SignalConstPointerStore sessionStore,
        SignalConstPointerStore identityKeyStore,
        SignalConstPointerStore prekeyStore,
        SignalConstPointerStore signedPrekeyStore,
        SignalConstPointerStore kyberPrekeyStore);

    // --- Sealed sender ---

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_sender_certificate_deserialize")]
    public static extern IntPtr SenderCertificateDeserialize(out SignalMutPointer outCert, SignalBorrowedBuffer data);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_sender_certificate_destroy")]
    public static extern IntPtr SenderCertificateDestroy(SignalMutPointer p);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_sender_certificate_get_sender_uuid")]
    public static extern IntPtr SenderCertificateGetSenderUuid(out IntPtr outUuid, SignalConstPointer obj);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_sender_certificate_get_device_id")]
    public static extern IntPtr SenderCertificateGetDeviceId(out uint outId, SignalConstPointer obj);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_unidentified_sender_message_content_new")]
    public static extern IntPtr UsmcNew(
        out SignalMutPointer outContent,
        SignalConstPointer message,
        SignalConstPointer sender,
        uint contentHint,
        SignalBorrowedBuffer groupId);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_unidentified_sender_message_content_new_from_content_and_type")]
    public static extern IntPtr UsmcNewFromContentAndType(
        out SignalMutPointer outContent,
        SignalBorrowedBuffer message,
        uint msgType,
        SignalConstPointer sender,
        uint contentHint,
        SignalBorrowedBuffer groupId);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_unidentified_sender_message_content_destroy")]
    public static extern IntPtr UsmcDestroy(SignalMutPointer p);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_unidentified_sender_message_content_get_contents")]
    public static extern IntPtr UsmcGetContents(out SignalOwnedBuffer outBuf, SignalConstPointer obj);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_unidentified_sender_message_content_get_msg_type")]
    public static extern IntPtr UsmcGetMsgType(out uint outType, SignalConstPointer obj);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_unidentified_sender_message_content_get_sender_cert")]
    public static extern IntPtr UsmcGetSenderCert(out SignalMutPointer outCert, SignalConstPointer obj);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_sealed_session_cipher_encrypt")]
    public static extern IntPtr SealedEncrypt(
        out SignalOwnedBuffer outBuf,
        SignalConstPointer destination,
        SignalConstPointer content,
        SignalConstPointerStore identityKeyStore);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_sealed_session_cipher_decrypt_to_usmc")]
    public static extern IntPtr SealedDecryptToUsmc(
        out SignalMutPointer outContent,
        SignalBorrowedBuffer ctext,
        SignalConstPointerStore identityStore);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "signal_profile_key_derive_access_key")]
    public static extern IntPtr ProfileKeyDeriveAccessKey(IntPtr out16, IntPtr profileKey32);
}
